testdata/invalid/invalid_enum_unparseable_uint.bop
enum a : uint16 {
    AB = 77777777;
}